--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -398,7 +398,7 @@ In Table \ref{tab:dieswell1} the values of intercepts and slopes with their stan
 It is known that a rise in temperature can increase the rate of stress relaxation, leading to a decrease in extrudate swell. Moreover, a reduction of viscosity caused by an increase in temperature contributes to a decrease in extrudate swell, because of a reduction in stress applied to polymer molecules.
 Therefore, there is a competition between these two effects; in fact, an increase in applied load decreases the die swell while increasing the temperature, the swell reduces.~\cite{swell}
 \newpage
-In Figure \ref{fig:mfi} melt flow index chart in function of temperature and parametric with pressure for PP–1 sample is reported. Standard deviations are not reported since they are too small (view Appendix A).
+In Figure \ref{fig:mfi} melt flow index chart in function of temperature and parametric with pressure for PP–1 sample is reported. Standard deviations are not reported since they are too small (view Appendix A for raw data and standard deviations).
 \begin{figure}[h!]
 	\centering
 	\subfloat[][]
@@ -420,7 +420,7 @@ In Figure \ref{fig:mw} the dependency of molecular weight in function of the MFI
 	\centering
 	{\includegraphics[scale=0.4]{mw}}
 	\captionsetup{justification=centering}
-	\caption{Dependency of molecular weight and MFI for polypropylene. For ref. data see Appendix B}
+	\caption{Dependency of molecular weight and MFI for polypropylene.}
 	\label{fig:mw}
 \end{figure}\\
 The Figure \ref{fig:mw} shows that increasing MFI the molecular weight decreases exponentially. From interpolation the resulting expression is reported in Equation \ref{eq:mw}. 
@@ -456,7 +456,7 @@ $
 \bottomrule
 \end{array}
 $
-\caption{Die swell values of three types of PPs. See raw data in Appendix C}
+\caption{Die swell values of three types of PPs. See raw data in Appendix B}
 \label{tab:dieswell}
 \end{table}\\
 It can be seen that the higher the molecular weight the lower die swell values. High molecular weight means longer chains and this leads to high possibility of orientation and consequently a less expansion of diameter at the die exit.
@@ -501,7 +501,7 @@ The results of the experiment are reported in Figure \ref{fig:duro}:
 	\centering
 	{\includegraphics[scale=0.3]{duro}}
 	\captionsetup{justification=centering}
-	\caption{Hardness values comparison. For raw data see Appendix D.}
+	\caption{Hardness values comparison. For raw data see Appendix C.}
 	\label{fig:duro}
 \end{figure}
 
@@ -562,6 +562,64 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \begin{table}[htp]
 	\centering
 	$
+	\begin{array}{ccccc}
+	\toprule
+	\textbf{m} \, (kg) & \textbf{t} \, (s) & \textbf{T} \, (^\circ\text{C}) & \textbf{mass} \, (g) & \textbf{diameter} \, (mm) \\ 
+	\midrule
+	2 & 60 & 190 & 0.3763 & 2.43 \\
+	2 & 60 & 190 & 0.3761 & 2.58 \\
+	2 & 60 & 190 & 0.4093 & 2.4 \\
+	2 & 60 & 190 & 0.4096 &  \\ 
+	2 & 60 & 190 & 0.4346 &  \\ \hline
+	5 & 30 & 190 & 0.752 & 3.1 \\
+	5 & 30 & 190 & 0.7892 & 2.85 \\
+	5 & 30 & 190 & 0.7717 & 2.97 \\
+	5 & 30 & 190 & 0.8279 &  \\
+	5 & 30 & 190 & 0.8912 &  \\ \hline
+	7 & 15 & 190 & 0.6683 & 3.28 \\
+	7 & 15 & 190 & 0.5827 & 3.02 \\
+	7 & 15 & 190 & 0.61 & 3.06 \\
+	7 & 15 & 190 & 0.6311 &  \\
+	7 & 15 & 190 & 0.6693 &  \\ \hline
+	2 & 30 & 210 & 0.1979 & 2.09 \\
+	2 & 30 & 210 & 0.1958 & 2.46 \\
+	2 & 30 & 210 & 0.1929 & 2.36 \\
+	2 & 30 & 210 & 0.2194 &  \\
+	2 & 30 & 210 & 0.2829 &  \\ \hline
+	5 & 15 & 210 & 0.6135 & 2.93 \\
+	5 & 15 & 210 & 0.599 & 2.97 \\
+	5 & 15 & 210 & 0.6112 & 2.84 \\
+	5 & 15 & 210 & 0.6266 &  \\ 
+	5 & 15 & 210 & 0.6380 &  \\ \hline
+	7 & 10 & 210 & 0.8135 & 2.86 \\ 
+	7 & 10 & 210 & 0.8102 & 3.01 \\ 
+	7 & 10 & 210 & 0.815 & 2.79 \\ \hline
+	2 & 10 & 230 & 0.1682 & 2.44 \\
+	2 & 10 & 230 & 0.1491 & 2.6 \\ 
+	2 & 10 & 230 & 0.1558 & 2.36 \\ 
+	2 & 10 & 230 & 0.1523 &  \\
+	2 & 10 & 230 & 0.1709 &  \\ \hline
+	5 & 10 & 230 & 0.6354 & 2.89 \\
+	5 & 10 & 230 & 0.6013 & 2.79 \\
+	5 & 10 & 230 & 0.5948 & 2.98 \\
+	5 & 10 & 230 & 0.6518 &  \\
+	5 & 10 & 230 & 0.6746 &  \\ \hline
+	7 & 5 & 230 & 0.8169 & 2.88 \\
+	7 & 5 & 230 & 0.6869 & 3.02 \\
+	7 & 5 & 230 & 0.6357 & 2.99 \\
+	7 & 5 & 230 & 0.4969 &  \\
+	7 & 5 & 230 & 0.7635 &  \\
+	\bottomrule
+\end{array}
+$
+	\caption{Experimental data for Melt Flow Index measurament of sample PP-1.}
+	\label{tab:exmfi}
+\end{table}
+
+
+\begin{table}[htp]
+	\centering
+	$
 	\begin{tabular}{c|ccc}
 	\toprule
 	\textbf{MFI} & 190 & 210 & 230\\
@@ -576,27 +634,6 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 	\label{tab:tmwpp}
 \end{table}
 
-\section{Molecular weight calculation}
-
-\begin{table}[htp]
-	\centering
-	$
-	\begin{array}{cc}
-	\toprule
-	\textbf{Molecular weight}\, (g/mol) & \textbf{MFI}\, (230 ^\circ C, 2.16 kg) \\
-	\midrule
-	142 & 22.8\\
-	180 & 7.3\\
-	220 & 3.5\\
-	292 & 1.2\\
-	358 & 0.39\\
-	\bottomrule
-	\end{array}
-	$
-	\caption{Molecular weight and MFI for polypropylene}
-	\label{tab:tmwpp}
-\end{table}
-
 \section{Die swell}
 
 \begin{table}[htp]
@@ -604,21 +641,23 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 	$
 	\begin{array}{cccc}
 	\toprule
-	\textbf{Sample} & \textbf{Specimen} & \textbf{Mass}\, (g) & \textbf{Diamater}\, (mm)\\
+	\textbf{Sample} & \textbf{Specimen} & \textbf{Mass}\, (g) & \textbf{Diameter}\, (mm)\\
 	\midrule
-	PP-1 & 1 & 0.3763 & 2.43\\
+	 & 1 & 0.3763 & 2.43\\
 	PP-1 & 2 & 0.3761 & 2.58\\
-	PP-1 & 3 & 0.4093 & 2.4\\
-	PP-2 & 1 & 0.1832 & 2.4\\
+	 & 3 & 0.4093 & 2.4\\
+	\midrule
+	 & 1 & 0.1832 & 2.4\\
 	PP-2 & 2 & 0.1643 & 2.34\\
-	PP-2 & 3 & 0.1682 & 2.33\\
-	PP-3 & 1 & 0.3689 & 3.3\\
+	 & 3 & 0.1682 & 2.33\\
+	\midrule
+	 & 1 & 0.3689 & 3.3\\
 	PP-3 & 2 & 0.3648 & 3.22\\
-	PP-3 & 3 & 0.3935 & 3.36\\
+	 & 3 & 0.3935 & 3.36\\
 	\bottomrule
 	\end{array}
 	$
-	\caption{Molecular weight and MFI for polypropylene}
+	\caption{Experimental data for die swell calculation of three types of PPs at T = 230$^\circ$C and under a load of 2.16 kg.}
 	\label{tab:tmwpp}
 \end{table}
 
