--- a/Polymers lab/4/G1- LAB 4 FINAL.tex
+++ b/Polymers lab/4/G1- LAB 4 FINAL.tex
@@ -222,7 +222,7 @@ Diameters have been taken using micrometer. The filament linear density (titer, 
 	t = \rho \cdot A
 	\label{eq:titer}
 \end{equation}
-where $t$ is the titer expressed in dtex, $\rho$ is the density and $A$ is the cross-section of the fiber, considered as circular. Titer in denier is found multiplying $t$ by a factor 0.9. The apparent draw ratio $DR$ is calculated using Equation \ref{eq:DR}. 
+where $t$ is the titer expressed in dtex, $\rho$ is the density taken equal to 0.9 g/cm$^3$ and $A$ is the cross-section of the fiber, considered as circular. Titer in denier is found multiplying $t$ by a factor 0.9. The apparent draw ratio $DR$ is calculated using Equation \ref{eq:DR}. 
 \begin{equation}
 	DR = \Bigl(\frac{D_{max}}{D_{min}}\Bigr)^2
 	\label{eq:DR}
@@ -242,7 +242,7 @@ The tensile strength $\sigma_b$ of the fibers is calculated accordingly to Equat
 	\sigma_{b} = T_{DR}\cdot \rho \cdot 100
 	\label{eq:sigma}
 \end{equation}
-where $\rho$ is expressed in g/cm$^3$. 
+where $\rho$ is 0.9 g/cm$^3$. 
 
 \newpage
 
