--- a/Polymers lab/4/G1- LAB 4 FINAL.tex
+++ b/Polymers lab/4/G1- LAB 4 FINAL.tex
@@ -319,7 +319,7 @@ The weights of the product before and after compression are reported in Table \r
 	\label{tab:weights_comparison}
 \end{table}
 
-The table shows that the weight variation is slighty highier, that can be explained by the more difficult preparation of the sample before compression, due to its volume distribution.
+The table shows that the weight variation is slighty higher, that can be explained by the more difficult preparation of the sample before compression, due to its volume distribution.
 
 \newpage
 
@@ -435,7 +435,7 @@ $
 \toprule
 \textbf{Figure} & \textbf{Material} & \textbf{Weight}\,(\text{g}) & \textbf{Size}\,(\text{mm}) & \textbf{Description} \\
 \midrule
-\text{a} & \text{ABS} & 14.78 & 12.77\times 3.27\times 163.55 & \text{grey and flexible}\\
+\text{a} & \text{ABS} & 14.78 & 12.77\times 3.27\times 163.55 & \text{grey and semirigid}\\
 \text{b} & \text{COC} & 14.07 & 12.64\times 3.30\times 164.04 & \text{transparent and glassy}\\
 \text{c} & \text{PP} & 12.28 & 12.60\times 3.35\times 162.29 & \text{opaque and flexible} \\
 \text{d} & \text{HDPE} & 12.73 & 12.54\times 3.33\times 160.00 & \text{yellow and very flexible} \\
@@ -588,7 +588,7 @@ $
 \text{Shrinkage}\, ({\%}) & \text{ASTM D}{955} & 1.0 \pm 0.5 \\
 \text{Izod with notch}\, \text{(J/m)} & \text{ASTM D}{256}\,(23^\circ \text{C}) & 40 \pm 10 \\
 \text{Elastic modulus}\, \text{(MPa)} & \text{ASTM D}{790}& 1400 \pm 150 \\
-\text{Behaviour to fire}\, (1.6 \text{mm}\,\text{thickness)} & \text{ASTM UL}{94} & V1 \\
+\text{Behaviour to fire}\, (1.6 \text{mm}\,\text{thickness)} & \text{UL}{94} & V1 \\
 \bottomrule
 \end{array}
 $
