--- a/Polymers lab/2/G1-LAB 2 FINAL.tex
+++ b/Polymers lab/2/G1-LAB 2 FINAL.tex
@@ -463,7 +463,7 @@ $
 \toprule
 \textbf{Sample} & \bm{T_{g}} (\SI{}{\celsius}) & \bm{T_{c}} (\SI{}{\celsius}) & \bm{\Delta H_{c}} (\si{J/g}) \\
 \midrule
-\text{PET} & \text{n.d.} & 114.0 & 30.7  \\
+\text{PET} & \text{n.d.} & 114.0 & 29.9 \\
 \text{PET–T2} & \text{n.d.} & 161.3 & 30.7 \\
 \text{PLA} & 52.4 & - & -  \\
 \text{PLA–T1} & 49.7 & - & -  \\
@@ -475,7 +475,9 @@ $
 $
 \caption{DSC results for all samples during cooling. \\n.d. = not detectable.}
 \label{tab:dsc2}
-\end{table}\\
+\end{table}
+
+\newpage
 In Table \ref{tab:dsc3} results of DSC analysis of the second heating on all samples are displayed. 
 \begin{table}[htp]
 \centering
@@ -536,7 +538,7 @@ $
 \midrule
 \text{PET} & 1313\pm 6\\
 \text{PET–T2} & 1336\pm 3 \\
-\text{PET-T3} & 1327\pm 3 \\
+\text{PET-T1} & 1327\pm 3 \\
 \bottomrule
 \end{array}
 $
@@ -588,7 +590,7 @@ $
 \textbf{Sample} & \mathbf{\rho}\,\,({kg/m^{3}})\\
 \midrule
 \text{Pure} & 1183 \pm 1\\
-\text{P2} & 1234 \pm 12\\
+\text{P2} & 1240 \pm 5\\
 \text{P2-HT} & 1242 \pm 15\\
 \bottomrule
 \end{array}
@@ -611,11 +613,11 @@ In Figure \ref{fig:tga}a-b the TGA thermograms of PMMA and T samples are reporte
 \caption{TGA thermograms for (a) Bone cement and (b) T samples.}
 \label{fig:tga}
 \end{figure}\\
-From Figure \ref{fig:tga}a it can be noticed that at $161.6^\circ C $ the $2.35 \%$ of the total mass is lost, probably due to presence of water. At $382.9^\circ$C, degradation of the polymer (PMMA) occurs and thus a loss of $87.70\%$ of the initial mass is registered. However a residue of $9.1\%$ is left at the end of the process because the barium sulphate (\chemfig{BaSO_{4}}) is stable as inorganic compound. This percentage of remaining mass is comparable with the value of the amount of sulphate found in the previous laboratory activity that was equal to $9.6\%$ for the first polymerization (P1)~\cite{gruppo1}. 
+From Figure \ref{fig:tga}a it can be noticed that PMMA degradates in the range of about 200 - 450$^\circ$C with a mass loss of 87.70$\%$ and DTGA peak is at 382.9$^\circ$C. A mass loss of 2.35$\%$ has been observed in the interval of 100 - 200$^\circ$C, probably due to the presence of water and DTGA peak is at 157$^\circ$C. However a residue of $9.1\%$ is left at the end of the process because the barium sulphate (\chemfig{BaSO_{4}}) is stable as inorganic compound. This percentage of remaining mass is comparable with the value of the amount of sulphate found in the previous laboratory activity that was equal to $9.6\%$ for the first polymerization (P1)~\cite{gruppo1}. 
 
 \newpage
 
-From Figure \ref{fig:tga}b it can be observed that a first loss of mass of about $13.7\%$ is present at $288.8^\circ$C due to volatilization of oils and other chemical products contained in the blend, while in the interval 387.5 – 457.8°C the maximum degradation rate of the rubber is found with a mass loss equal to $45.8\%$. At about $575.9^\circ$C another loss of about $37.5\%$ related to carbon black is seen. In this case a residual mass of $2.1\%$ is left at the end of the analysis. These values of mass losses are comparable with the usual composition of a tire~\cite{gommista}.\\
+From Figure \ref{fig:tga}b it can be observed that rubber degradates in the range of about 380 - 500$^\circ$C with a mass loss of 45.9 $\%$ and DTGA peak is at 387.5$^\circ$C for natural rubber and 457.8$^\circ$C for sinthetic rubber. A mass loss of 37.8 $\%$ has been observed in the interval of 500 - 620 $^\circ$C, related to the the presence of the carbon black and DTGA peak is at 575.9 $^\circ$C. Another mass loss has been observed in the range of 180 - 350$^\circ$C due to volatilization of oils and other chemical products contained in the blend and DTGA peak is at 288.8$^\circ$C. In this case a residual mass of $2.4\%$ is left at the end of the analysis. These values of mass losses are comparable with the usual composition of a tire~\cite{gommista}.v\\
 In Table \ref{tab:tga} results of TGA analysis on all samples are displayed. 
 \begin{table}[htp]
 \centering
@@ -624,37 +626,39 @@ $
 \toprule
 \textbf{Sample}  & \bm{T_{d,1}} (\SI{}{\celsius}) & \bm{T_{d,2}} (\SI{}{\celsius}) & \bm{T_{d,3}} (\SI{}{\celsius}) & \bm{T_{d,4}} (\SI{}{\celsius}) & \bm{m_{r}} (\si{\%}) \\
 \midrule
-\text{PMMA}  & 382.9 & - & - & - & 9.1  \\
-\text{T}  & 288.8 & 387.5 & 457.8 & 575.9 & 2.1  \\
+\text{PMMA}  & 157 & 382.9 & - & - & 9.1  \\
+\text{T}  & 288.8 & 387.5 & 457.8 & 575.9 & 2.4  \\
 \bottomrule
 \end{array}
 $
 \caption{TGA results for all samples. $T_d$ is representative of the maximum rate of mass loss.}
 \label{tab:tga}
 \end{table}\\
-Moreover, it has been evaluated the amount of natural and synthetic rubber present in the sample looking at the thermogram and its derivative: the derivative shows two peaks and the thermogram shows a slight difference in the slope, corresponding to the degradation of the two components. The amount has been extimated as 30\% of natural rubber and 70\% as synthetic rubber. These values of mass losses are comparable with the usal compostion of the tire. \\
-In Table\ref{tab:phr} the values of phr for the tire analyzed are reported.
+Moreover, it has been evaluated the amount of natural and synthetic rubber present in the sample looking at the thermogram and its derivative: the derivative shows two peaks and the thermogram shows a slight difference in the slope, corresponding to the degradation of the two components.\\
+In the following Table\ref{tab:phr}, values of mass and phr for the tire analyzed are reported.
 
 \begin{table}[htp]
 \centering
 $
-\begin{array}{ccc}
+\begin{array}{lcc}
 \toprule
-\textbf{Components} & \textbf{phr} \\
+\textbf{Components} & \textbf{mass} \% & \textbf{phr} \\
 \midrule
-\text{Process oil} & 15 \\
-\text{NR} & 38\\
-\text{SBR} & 70 \\
-\text{Carbon black} & 55 \\
-\text{Ash}& 3\\
+\text{Process oil} & 13.9 & 30 \\
+\text{NR} & 13.7 &30\\
+\text{SBR} & 32.2 &70 \\
+\text{Carbon black} & 37.8 & 82 \\
+\text{Ash}& 2.4 & 5\\
 \midrule
-\text {Total phr}& 181\\
+\text {Total}& 100 & 217\\
 \bottomrule
 \end{array}
 $
-\caption{Values of phr for the tire analyzed.}
+\caption{Values of mass and phr for the tire analyzed.}
 \label{tab:phr}
 \end{table}
+
+
 
 \subsection{Solvent effect}
 
@@ -679,8 +683,8 @@ of different products contained in the blend added to the ABS rubber, such as oi
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer Handbook, J. Brandrup, E.H. Immergut, third edition, Wiley 2003.
-\bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology, third edition, Wiley 2014.
+\bibitem{handbook} Polymer Handbook, J. Brandrup, E.H. Immergut, third edition, New York, Wiley \& Sons 2003.
+\bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology, third edition, New York, Wiley \& Sons 2014.
 \bibitem{densità} ASTM D792 "Standard test methods for density and specific gravity of plastics by displacement".
 \bibitem{gruppo1} Radical polymerization and polymer casting for production of bone cement. Water absorption kinetics analysis. Group 1 of PME 2018/19, University of Trento. 
 
