--- a/Polymers lab/3/G1- LAB 3 FINAL.tex
+++ b/Polymers lab/3/G1- LAB 3 FINAL.tex
@@ -384,7 +384,7 @@ In Table \ref{tab:dieswell1} the values of intercepts and slopes with their stan
 	$
 	\begin{array}{ccc}
 	\toprule
-	\textbf{Temperature}\, (^\circ \text{C}) & \textbf{Intercept} & \textbf{Slope} \, (1/^\circ \text{C}) \\
+	\textbf{Temperature}\, (^\circ \text{C}) & \textbf{Intercept} & \textbf{Slope} \, (1/\text{Kg}) \\
 	\midrule
 	190 & 1.05 \pm 0.17 & 0.17 \pm 0.03 \\
 	210 & 0.97 \pm 0.39 & 0.15 \pm 0.08 \\
@@ -437,7 +437,7 @@ $
 \text{} & \textbf{PP–1} & \textbf{PP–2} & \textbf{PP–3} \\
 \midrule
 \text{MFI (g/10min)} & 9.56 & 1.72 & 22.75  \\
-\text{MW (g/mol)}\cdot 10^{-5} & 1.74 & 2.36 & 1.42 \\
+\text{MW (g/mol)}\cdot 10^{-3} & 174 & 236 & 142 \\
 \bottomrule
 \end{array}
 $
@@ -547,9 +547,9 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, third edition, New York, Wiley \& Sons 2003.
 \bibitem{MFI} ASTM D1238–10 “Melt flow rates of thermoplastics by extrusion”. 
 \bibitem{LOI} ASTM D2863–06a “Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics”.
-\bibitem{VICAT} ASTM D1525 “Standard test method for Vicat softening temperature of plastics”
-\bibitem{SHORE} ASTM D2240 Type A and Type D “Standard test method for rubber property”
-\bibitem{swell} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280
+\bibitem{VICAT} ASTM D1525 “Standard test method for Vicat softening temperature of plastics”.
+\bibitem{SHORE} ASTM D2240 Type A and Type D “Standard test method for rubber property”.
+\bibitem{swell} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280, 1997.
 
 \end{thebibliography}
 
@@ -572,7 +572,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 	\bottomrule
 	\end{tabular}
 	$
-	\caption{Melt flow index values for PP-1 and standard deviations. m (kg) vs T ($^\circ$C)}
+	\caption{Melt flow index values (g/10 min) for PP-1 and standard deviations ati different load (kg) and temperature ($^\circ$C)}
 	\label{tab:tmwpp}
 \end{table}
 
