--- a/Polymers lab/2/G1-LAB 2 FINAL.tex
+++ b/Polymers lab/2/G1-LAB 2 FINAL.tex
@@ -606,9 +606,9 @@ In Figure \ref{fig:tga}a-b the TGA thermograms of PMMA and T samples are reporte
 \begin{figure}[htp]
 \centering
 \subfloat[][]
-{\includegraphics[scale=0.42]{tgaPMMA}} \quad 
+{\includegraphics[scale=0.3]{tgaPMMA}} 
 \subfloat[][]
-{\includegraphics[scale=0.42]{tgaT}} \quad 
+{\includegraphics[scale=0.3]{tgaT}} 
 \captionsetup{justification=centering}
 \caption{TGA thermograms for (a) Bone cement and (b) T samples.}
 \label{fig:tga}
