--- a/Polymers lab/3/G1- LAB 3 FINAL.tex
+++ b/Polymers lab/3/G1- LAB 3 FINAL.tex
@@ -370,9 +370,9 @@ In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function 
 \begin{figure}[h!]
 	\centering
 	\subfloat[][]
-	{\includegraphics[scale=0.395]{dieswell}} \quad 
+	{\includegraphics[scale=0.425]{dieswell}} 
 	\subfloat[][]
-	{\includegraphics[scale=0.4]{dieswell2}}
+	{\includegraphics[scale=0.14]{dieswell2}}
 	\captionsetup{justification=centering}
 	\caption{Die swelling for PP–1 sample.}
 	\label{fig:dieswell}
@@ -402,9 +402,9 @@ In Figure \ref{fig:mfi} melt flow index chart in function of temperature and par
 \begin{figure}[h!]
 	\centering
 	\subfloat[][]
-	{\includegraphics[scale=0.3]{mfimod}} \quad
+	{\includegraphics[scale=0.35]{mfimod}}
 	\subfloat[][]
-	{\includegraphics[scale=0.4]{mfi2}}
+	{\includegraphics[scale=0.44]{mfi2}}
 	\captionsetup{justification=centering}
 	\caption{Melt flow index for PP–1 sample.}
 	\label{fig:mfi}
